<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/fragment_farm_arrow_left"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_keyboard_arrow_left"
        android:contentDescription="@string/fragment_farm_left_arrow"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_farm_recycler_view"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/fragment_farm_arrow_right"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_keyboard_arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fragment_farm_right_arrow"/>
</LinearLayout>