<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/activity_main_bottom_menu_home"
        android:title="@string/activity_main_bottom_menu_home"
        android:icon="@drawable/ic_home"
    />

    <item
        android:id="@+id/activity_main_bottom_menu_fav"
        android:title="@string/activity_main_bottom_menu_favorite"
        android:icon="@drawable/ic_favorite_dark"
    />
</menu>